[tool.poetry]
name = "examplealgorithms"
version = "0.1.0"
description = ""
authors = ["Sam <tritoke@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
Pillow = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
